--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path_provider: ^2.1.5
   shared_preferences: ^2.5.2
   flutter_cache_manager: ^3.4.1
+  json_annotation: ^4.9.0
   flutter:
     sdk: flutter
 
@@ -41,6 +42,9 @@ dependencies:
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
+  build_runner: ^2.4.13
+  json_serializable: ^6.9.0
+
   flutter_test:
     sdk: flutter
 
@@ -49,7 +53,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
