--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   shared_preferences: ^2.5.2
   flutter_cache_manager: ^3.4.1
   json_annotation: ^4.9.0
+  stack_trace: ^1.12.1
   flutter:
     sdk: flutter
 
