--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   flutter_cache_manager: ^3.4.1
   json_annotation: ^4.9.0
   stack_trace: ^1.12.1
+  provider: ^6.1.2
+  syncfusion_flutter_xlsio: ^23.1.35
+  universal_html: ^2.0.0
+  file_saver: ^0.2.14
   flutter:
     sdk: flutter
 
