--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.10.1+1
+version: 3.29.3
 
 environment:
-  sdk: ^3.5.3
+  sdk: ^3.7.2
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -38,6 +38,7 @@ dependencies:
   syncfusion_flutter_xlsio: ^23.1.35
   universal_html: ^2.0.0
   file_saver: ^0.2.14
+  http: ^1.4.0
   flutter:
     sdk: flutter
 
@@ -45,10 +46,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
-dev_dependencies:
-  build_runner: ^2.4.13
-  json_serializable: ^6.9.0
 
   flutter_test:
     sdk: flutter
