--- a/lib/pubspec.yaml
+++ b/lib/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   universal_html: ^2.0.0
   file_saver: ^0.2.14
   http: ^1.4.0
+  flutter_hooks: ^0.21.2
   flutter:
     sdk: flutter
 
