--- a/lib/windows/CMakeLists.txt
+++ b/lib/windows/CMakeLists.txt
@@ -5,7 +5,8 @@ project(lib LANGUAGES CXX)
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
 set(BINARY_NAME "lib")
-
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+set(BUILD_SHARED_LIBS OFF)
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
 cmake_policy(VERSION 3.14...3.25)
