--- a/lib/pubspec.yaml
+++ b/lib/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   archive: ^3.3.0      # GZIP 压缩/解压
   crypto: ^3.0.0       # 哈希计算
   logger: ^1.0.0       # 日志记录
+  window_manager: ^0.5.0
+  screen_retriever: ^0.2.0
   flutter:
     sdk: flutter
 
