--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   file_picker: ^9.0.2
   path_provider: ^2.1.5
+  path: ^1.9.0
   shared_preferences: ^2.5.2
   flutter_cache_manager: ^3.4.1
   json_annotation: ^4.9.0
